# openmeet-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile
docs/: README.md
migrations/20251201000000_create_users/: up.sql
migrations/20251201000001_create_refresh_tokens/: up.sql
src/: main.rs  schema.rs
src/auth/: handlers.rs  jwt.rs  mod.rs  models.rs  routes.rs
src/db/: mod.rs
src/sfu/: mod.rs  packet_buffer.rs  participant.rs  peer_connection.rs  repository.rs  room.rs
src/signaling/: handler.rs  message.rs  mod.rs
