[package]
name = "sfu-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web framework
axum = { version = "0.8.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }

# CORS and middleware
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket
tokio-tungstenite = "0.28"
futures-util = "0.3"

# WebRTC
webrtc = "0.14"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
anyhow = "1.0"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
